# msgsift

./: .gitignore  README.md  config.example.toml  credentials.example.toml  pyproject.toml  spec.md
.github/workflows/: release.yml
msgsift/: classifier.py  cli.py  config.py  digest.py  nightly.py  store.py  web.py
msgsift/sources/: __init__.py  imap.py
msgsift/templates/: index.html
systemd/: sift-nightly.service  sift-nightly.timer  sift-web.service  sift.service  sift.timer
