[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msgsift"
version = "0.1.0"
description = "Local-first email triage that turns your inbox into a daily todo list"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "imapclient>=3.1.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
msgsift = "msgsift.cli:main"
msgsift-nightly = "msgsift.nightly:main"
msgsift-web = "msgsift.web:run"

[project.urls]
Homepage = "https://github.com/lucasgerads/msgsift"
Repository = "https://github.com/lucasgerads/msgsift"
Issues = "https://github.com/lucasgerads/msgsift/issues"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
